# restaurant-ordering-system

./: .gitignore  vercel.json
backend/: .env.example  README.md  migrate_json_to_postgres.py  pyproject.toml  requirements.txt  verify_postgres_api.py
backend/alembic/: env.py
backend/alembic/versions/: 4c142704478a_initial_schema.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  categories.py  coupons.py  customers.py  dashboard.py  health.py  inventory.py  menu.py  orders.py  reports.py
backend/app/core/: auth.py  dependencies.py  security.py
backend/app/database/: categories.json  coupons.json  customers.json  inventory.json  menu.json  orders.json  revoked_tokens.json  settings.json  users.json
backend/app/db/: __init__.py  models.py  repository.py  session.py
backend/app/models/: category.py  coupon.py  customer.py  inventory.py  menu.py  order.py
backend/app/schemas/: admin.py  auth.py  category.py  common.py  coupon.py  customer.py  dashboard.py  inventory.py  menu.py  order.py
backend/app/services/: admin_service.py  auth_service.py  base_service.py  category_service.py  coupon_service.py  customer_service.py  dashboard_service.py  inventory_service.py  menu_service.py  order_service.py  report_service.py  settings_service.py
backend/app/utils/: constants.py  file_manager.py  pagination.py  response.py  validators.py
backend/scripts/: ensure_admin.py  ensure_chef.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
(+187 files in other folders)
